fix: fix font size on mobile devices

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -87,3 +87,13 @@ body {
 .icon-items {
   fill: currentColor;
 }
+
+@media screen and (max-width: 373px) {
+  .card-title {
+    font-size: 16px;
+  }
+
+  .card-description1 {
+    font-size: 14px;
+  }
+}
